fixed broken styles for akita

--- a/src/stylesheets/doi/pages/_search.scss
+++ b/src/stylesheets/doi/pages/_search.scss
@@ -7,7 +7,7 @@ h3.member-results, h3.provider-results, h3.user-results, h3.doi-results, h3.work
   color: $turquoise;
   border-bottom: 1px solid $medium-gray;
   padding: 0;
-  margin: 0 0 .35em 10px;
+  margin: 0 0 .35em 0;
 
   .small { font-size: $font-size-base; }
 }
